# onaws

./: LICENSE  README.md  awsipcheck.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
awsipcheck/: __main__.py  cli.py  core.py
onaws/: __init__.py  __main__.py  cli.py  core.py  ipranges.py
